--- a/module/Application/view/layout/partial/slider.phtml
+++ b/module/Application/view/layout/partial/slider.phtml
@@ -3,7 +3,7 @@
 		<div id="example1" class="core-slider core-slider__carousel example_1">
 			<div class="core-slider_viewport">
 				<div class="core-slider_list">
-					
+					<?php $this->SlideHelper?>
 				</div>
 			</div>
 			<div class="core-slider_nav">
