--- a/module/Admin/view/admin/slide/list.phtml
+++ b/module/Admin/view/admin/slide/list.phtml
@@ -77,7 +77,7 @@
 					aria-hidden="true">&times;</button>
 				<h4 class="modal-title" id="myModalLabel">Delete Type products</h4>
 			</div>
-			<form class="form-horizontal" action="" method="POST" role="form">
+			<form class="form-horizontal" action="slide/delete" method="POST" role="form">
 				<div class="modal-body">
 					<div class="col-sm-12 text-center">Bạn Muốn Xóa Loại Sản Phẩm:</div>
 					<div class="col-sm-12 text-center">
